# SME208-Group2-DeskRobot-Repo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: ai_service_api_research.md
main/: CMakeLists.txt  api_config.c  api_config.h  api_config_private.example.h  asr_client.c  asr_client.h  audio_mic.c  audio_mic.h  audio_spk.c  audio_spk.h  ble_serial.c  ble_serial.h  cinnamoroll_bitmap.h  display.c  display.h  idf_component.yml  key.c  key.h  key_duration_monitor.c  key_duration_monitor.h  led.c  led.h  llm_client.c  llm_client.h  main.c  power_manager.c  power_manager.h  servo.c  servo.h  system_info.c  system_info.h  system_status.c  system_status.h  tts_client.c  tts_client.h  voice_assistant.c  voice_assistant.h  wifi_network.cc  wifi_network.h
tools/: local_ai_server.py
